# locproof

./: .env.example  .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  README.md
.sqlx/: query-00da47640de3cc99474fad09a2cb553d52fb632af082a3b401cc59cda627c7a3.json  query-1d5562d9e0d701e15038c4103313264947b5ae40212c899946bd87659efea4ca.json  query-1e32218babd954fd398993b21172911eb15fb40183a68e7e05df1c3859d4866c.json  query-1ec87db0e7bde833899c9ff4b6f96f9d016234d3b331ccc12107bc97ff1964cb.json  query-31e1216b3ba7938402c135222430431bf02a6ccf75a0af1a25f6783ef5b9f1fa.json  query-3b00065252617f329b4ae526f781434f805ab6ed51f0df6fd2652ecbd066cfb0.json  query-492d40b811b9a10525f286bd61ffb5293ed2243ffdf25c1cbac274da53377cbc.json  query-54991761eaacd098c83093c2f2ce099b8d514e482321df5d37fe162bd4302d1d.json  query-58b57d26d73956c4ed3d61e7bd31b1f9a0e8874d5a02852e97857e168808108b.json  query-5eefe59cce300dc85194e82f9403559d989608ef989c49ebcc097bc4160d69e5.json  query-6875a4263d226811657db963a592bde6433cacfaf3b71db49f703c34e0663c7c.json  query-7bb109886d91683cf30bce1d964feb19997aa169d2d3238d8272b8839147f05e.json  query-9a2a72609e452df16bacbf8109f4e48c483118de6e54988e6cf65803ad8608a0.json  query-a3af2d0db0cbb018dac665b0199f5bc70efe0673805dcfaf2f9d46428d7735cf.json  query-a3c76e471c4f70afbf41e967295ccb43dcbce5bc5f685334a9714bda700d68fb.json  query-b882a8d6cf464a9704be6038bb4935e664f43538f9a34e1f316328d0f46ec252.json  query-baf3a3592223edde355d69b63881742930fa442af54913419653569903688d30.json  query-c0d323ec1d926da4beede29106275bd6fb67f282b247359459dea56a4cf7b8f8.json  query-c403683b829ec5b437878803bc226bc5384f8464910a221cba61a4182d8fcde8.json  query-d5873a605bbc5de8e6a798a1f59f4d0fefb127b69ff7bd2b0b66e1e4a5908027.json  query-f1b890406205e802aece59daf208d82b3dadf378adecf35659df0ad703a96b84.json  query-f63d506490bbc9661b2888554b7d19c205453d160abda13531bb69b48af957d3.json  query-f76336da234a73e81e805b1cb5b42b47500fcfb2dfcbf842cfb1d60305566aaa.json
api/: Cargo.toml
api/src/: auth.rs  db.rs  error.rs  keystore.rs  lib.rs  main.rs  plan.rs  ratelimit.rs  state.rs
api/src/models/: api_key.rs  customer.rs  mod.rs  session.rs  user.rs
api/src/routes/: admin.rs  auth.rs  dashboard.rs  mod.rs  proofs.rs  usage.rs
api/tests/: dashboard_e2e.rs  proofs_e2e.rs
core/: Cargo.toml
core/src/: lib.rs  proof.rs  scoring.rs  signals.rs  verify.rs
dashboard/: next.config.ts  package.json  pnpm-lock.yaml
docs/: CLAIMS.md  PROTOCOL.md  SIGNALS.md  THREAT_MODEL.md
migrations/: 001_initial.sql  002_api_keys_and_plans.sql  (+1 more)
(+20 files in other folders)
