[workspace]
resolver = "2"
members = ["core", "api"]

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["ChronoCoders <altug@bytus.io>"]
license = "BUSL-1.1"

[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
axum = "0.7"
ed25519-dalek = { version = "2", features = ["rand_core"] }
rand = "0.8"
thiserror = "1"
anyhow = "1"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4", "serde"] }
bincode = "1.3"
base64 = "0.22"
governor = "0.6"
sqlx = { version = "0.7", default-features = false, features = ["runtime-tokio", "tls-rustls", "postgres", "uuid", "chrono", "json", "macros", "migrate"] }
dotenvy = "0.15"
sha2 = "0.10"
hex = "0.4"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tower = { version = "0.5", features = ["util"] }
http-body-util = "0.1"
argon2 = "0.5"
async-stripe = { version = "0.39", default-features = false, features = ["runtime-tokio-hyper-rustls"] }
axum-extra = { version = "0.9", features = ["cookie"] }
time = "0.3"
